<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:inputType="text"
        android:id="@+id/text"
        android:hint="@string/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>
    <EditText
        android:inputType="text"
        android:hint="@string/name"
        android:id="@+id/textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>
    <EditText
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:id="@+id/textPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textPersonName"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/textPassword"
        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/textPhoneNumber"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>
    <EditText
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:id="@+id/textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>